site/pdxroasters/static/sass/screen.scss
/**
 * PDX Roaster Stylesheet
 *
 * @notes:
 *
 * Navigate to where you watch files:
 * $ cd src/site/pdxroasters/static/js
 *
 * Grunt will now watch compass:
 * $ grunt watch_all
 *
 */

@import 'compass/css3';
@import 'compass/utilities';

/* -- variables -- */
$dark-red:#CA4C29;
$red:#DD6A5A;
$light-red:#DD6A5A;
$yellow:#FFC434;
$light-green:#C0DC93;
$dark-blue:#00555F;
$blue:#13A1AF;
$light-blue:#0AAEBE;
$darker-gray:#323232;
$dark-gray:#d2d0cb;
$gray:#DDDBD4;
$light-gray:#F8f6f4;
$white:#FFFFFF;
$tan: #EAE6BA;
$dark-brown: #44372c;
$brown: #563f29;
$light-brown:#6d543d;
$skolar: 'Skolar', Helvetica, Arial, Sans-serif;
$din: 'DIN', Helvetica, Arial, Sans-serif;
$cabin: 'Cabin', Helvetica, Arial, Sans-serif;

@import 'reset';
@import 'fonts';
@import 'typography';
@import 'grid';
@import 'forms';
@import 'helpers';


/* -- elements -- */
html{
    background-color:$light-gray;
}
body {
    margin: 0;
    min-height: 100%;
    font-size: 16px;
    font-family: $cabin;
    -webkit-font-smoothing: antialiased;

    &.no-scroll {
        overflow-y: hidden;
    }
}

/* -- classes -- */
.btn {
    background: #dddbd4;
    border: 1px solid #d2d0cb;
    padding:.5em 2em;
    cursor: pointer;
    //margin-right: 1em;
    text-transform: none;
    letter-spacing: 1px;
    text-align: center;
    text-indent: 0px;
    text-decoration: none;
    color: #fff;
    display: block;
    &:hover {
        border-color: #b6b4b0;
        color: #555;
    }
}
.plus-close {
    background: url(../img/plusthin.png) no-repeat 0 0;
    display: block;
    height: 22px;
    position: absolute;
    right: 20px;
    text-indent: -9999px;
    top: 20px;
    width: 22px;
    @include transform(rotate(-45deg));
}

/* -- structure -- */
#page,
#content {
    overflow: hidden;
    position: relative;
}
#content {
    left: 0;
    width: 100%;
    @include transition(all 500ms ease-in);
    @include transform(translate3d(0,0,0));
    &.inactive {
       left: -100%;
        #roasters{
            .roasters{
                /* thought about limiting height on roasters when individual roaster is selected to get around the position-fixed scroll debacle.
                height:0;
                overflow:hidden;
                */
            }
        }
    }
}
#header {
    background: white;
    left: 0;
    right: 0;
    top: 0;
    z-index: 10;
    position: relative;
    width: 100%;
    max-width: 100%;
    overflow: hidden;
    height: 5em;
    padding: 0 2em;
    @include box-shadow(0px 8px 16px rgba(0,0,0,0.06));
    border-bottom: 1px solid #efefef;
}
.home #header {
    position: fixed;
}
#footer {
    background-color: #000;
    color: #fff;
    padding: 10px 40px;
    z-index: 10;
}

/* -- nav -- */
#logo {
    color: $brown;
    font-size: 1.5em;
    letter-spacing: 1px;
    &:before{
        content: "";
        width: 2em;
        height: 2em;
        background: $tan url("../img/logo.png") no-repeat center center;
        background-size:1.7em;
        @include retina-display(){
            background: $tan url("../img/logo@2x2.png") no-repeat center center;
            background-size: 1.7em;
        }
        position: relative;
        display: inline-block;
        margin-top: .75em;
        margin-right: .5em;
        vertical-align: -0.85em;
        @include border-radius(2.5em);
        &:hover{
            border: 10px solid $tan;
        }
    }
}

#nav {
    position: absolute;
    top: 28px;
    right: -280px;
    @include transition(all 200ms ease-in-out 200ms);
    &.active {
        right: 133px;
    }

    ul {
        li {
            display: inline-block;
            margin-left: 40px;
            padding: 15px 0;
            vertical-align: middle;

            &:first-child {
                margin-left: 0;
            }

            a {
                letter-spacing: 1px;
                color: #303030;
                text-transform: none;
                font-size: 1.25em;
                &:hover,
                &.on {
                    color: $blue;
                }
            }
        }
    }

    .plus {
        display: inline-block;
        background: transparent url("../img/plusthin.png") no-repeat 0 0;
        width: 22px;
        height: 22px;
        vertical-align: middle;

        @include transition(all 400ms cubic-bezier(0.095, 0.910, 0.245, 1.000));

        &.active {
            @include transform(rotate(-225deg));
        }
    }
}

/* -- push pages -- */
.push-pages {
    background-color: #f0f0f0;
    bottom: 0;
    left: 100%;
    overflow: hidden;
    position: absolute;
    right: 0;
    top: 0;
    width: 100%;
    z-index: 9;

    @include transition(left 300ms ease-in-out);

    &.active {
        left: 0;
    }

    > .page {
        left: 100%;
        overflow: hidden;
        position: absolute;
        top: 0;
        width: 100%;

        @include transition(left 300ms ease-in-out);

        > .page-inner {
           padding: 400px 200px 170px 200px;
        }
    }
}

/* -- maps -- */
#map-wrap {
    position: relative;
    height: 100%;
    width: 100%;
    z-index: 7;
}
/* ... */

